--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,22 @@
 
 .slick-prev {
     left: 1% !important;
+    font-family:initial!important;
     z-index:1;
+    
+
 }
  
 .slick-next {
     right: 3% !important;
+    font-family:initial!important;
     z-index: 1;
+   
+    
+}
+.slick-prev:before,
+.slick-next:before {
+    color: #38A3A5!important;
+    
+   
 }
